# hive-iceberg-ferry

./: .gitignore  Makefile  README.md  config.aws.yaml  config.custom.yaml  config.nessie.yaml  config.register.yaml  config.s3tables.yaml  config.yaml  docker-compose.yml  pyproject.toml
.aida/: change_domains.yaml  git_policy.yaml  rules_selection.yaml  validation_policy.yaml  validation_registry.yaml
.aida/rules/: docker-stack.md  migration-engine.md  project-overview.md
.aida/templates/: commit-message.txt  pr-body.md
.codex/: config.toml
.cursor/rules/: aida.mdc
docker/hive/: core-site.xml  entrypoint-wrapper.sh  hive-site.xml
docker/presto/: hive.properties
scripts/: load_raw_parquet.py  load_sample_data.py  setup_docker.sh  validate_yaml.py  verify_migration.py
src/hive_to_iceberg/: cli.py  config.py  migrate.py
src/hive_to_iceberg/sources/: __init__.py  base.py  hive.py  parquet.py  registry.py
tests/: checks-nessie.sql  checks-register.sql  checks-s3tables.sql  checks.sql
